[package]
name = "lune"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.5", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.9", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
prost-reflect = { version = "0.11.4", features = ["serde", "text-format"] }
tonic = { version = "0.9.2" }
http = "0.2.9"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
once_cell = "1.17.1"
hyper = "0.14.26"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
tonic-reflection = "0.9.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
