[package]
name = "lune"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.14", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
prost-reflect = { version = "0.12.0", features = ["serde", "text-format"] }
tonic = { version = "0.10.0" }
http = "0.2.9"
hyper-rustls = { version = "0.24.1", features = ["http2"] }
once_cell = "1.18.0"
hyper = "0.14.27"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time"] }
tonic-reflection = "0.10.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
