[package]
name = "lune"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
tauri = { version = "2.0.0-beta.11", features = [] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
prost-reflect = { version = "0.13.0", features = ["serde", "text-format"] }
tonic = { version = "0.11.0" }
http = "0.2.12"
hyper-rustls = { version = "0.24.1", features = ["http2"] }
once_cell = "1.19.0"
hyper = "0.14.28"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time"] }
tonic-reflection = "0.11.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.30"
specta = { version = "2.0.0-rc.7", features = ["typescript", "export"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
